--- a/index.html
+++ b/index.html
@@ -293,36 +293,36 @@
     <!-- AI SECTION -->
     <section id="ia" class="py-20 bg-gradient-to-b from-slate-900 to-blue-950/40 relative border-y border-slate-800/50">
         <div class="container mx-auto px-6 relative z-10">
-            <div class="flex flex-col md:flex-row items-center gap-12">
-                <div class="md:w-1/2">
-                    <div class="flex items-center gap-2 mb-4 text-cyan-400">
+            <div class="flex flex-col items-center text-center max-w-4xl mx-auto">
+                <div class="w-full">
+                    <div class="flex items-center justify-center gap-2 mb-4 text-cyan-400">
                         <i data-lucide="brain-circuit" class="w-8 h-8"></i>
                         <span class="font-bold text-xl tracking-wider">AI ENTHUSIAST</span>
                     </div>
                     <h2 class="text-4xl md:text-5xl font-black text-white mb-6">
                         El Futuro es <br />Generativo
                     </h2>
-                    <p class="text-slate-300 text-lg mb-6">
+                    <p class="text-slate-300 text-lg mb-8 max-w-2xl mx-auto">
                         Inteligencia aplicada al ahora, estrategia para el futuro. Como consultor y entusiasta de la
                         Inteligencia Artificial, integro herramientas de última generación en mis flujos de trabajo.
                     </p>
-                    <ul class="space-y-4">
-                        <li class="flex items-center bg-slate-800/50 p-3 rounded-lg border border-slate-700">
-                            <i data-lucide="palette" class="text-purple-400 mr-3 w-5 h-5"></i>
-                            <span>Creación de imágenes artísticas con IA</span>
+                    <ul class="space-y-4 max-w-2xl mx-auto text-left">
+                        <li
+                            class="flex items-center bg-slate-800/50 p-4 rounded-lg border border-slate-700 hover:border-cyan-500/50 transition-colors">
+                            <i data-lucide="palette" class="text-purple-400 mr-4 w-6 h-6 flex-shrink-0"></i>
+                            <span class="text-lg">Creación de imágenes artísticas con IA</span>
                         </li>
-                        <li class="flex items-center bg-slate-800/50 p-3 rounded-lg border border-slate-700">
-                            <i data-lucide="video" class="text-pink-400 mr-3 w-5 h-5"></i>
-                            <span>Edición y generación de video asistida por IA</span>
+                        <li
+                            class="flex items-center bg-slate-800/50 p-4 rounded-lg border border-slate-700 hover:border-cyan-500/50 transition-colors">
+                            <i data-lucide="video" class="text-pink-400 mr-4 w-6 h-6 flex-shrink-0"></i>
+                            <span class="text-lg">Edición y generación de video asistida por IA</span>
                         </li>
-                        <li class="flex items-center bg-slate-800/50 p-3 rounded-lg border border-slate-700">
-                            <i data-lucide="cpu" class="text-cyan-400 mr-3 w-5 h-5"></i>
-                            <span>Optimización de flujos de trabajo digitales</span>
+                        <li
+                            class="flex items-center bg-slate-800/50 p-4 rounded-lg border border-slate-700 hover:border-cyan-500/50 transition-colors">
+                            <i data-lucide="cpu" class="text-cyan-400 mr-4 w-6 h-6 flex-shrink-0"></i>
+                            <span class="text-lg">Optimización de flujos de trabajo digitales</span>
                         </li>
                     </ul>
-                </div>
-                <div class="md:w-1/2 flex justify-center">
-                    <!-- Decorative AI Element REMOVED -->
                 </div>
             </div>
         </div>
