espacios hero/ecosistema reducidos

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </nav>
 
     <!-- HERO SECTION CORREGIDA -->
-    <section id="hero" class="relative h-screen flex items-center px-4 overflow-hidden">
+    <section id="hero" class="relative flex items-center px-4 overflow-hidden">
         <!-- Background Elements -->
         <div class="absolute top-0 right-0 w-1/2 h-full bg-cyan-500/5 blur-[120px] rounded-full pointer-events-none">
         </div>
@@ -164,7 +164,7 @@
     </section>
 
     <!-- SERVICES SECTION -->
-    <section id="servicios" class="py-20 px-6">
+    <section id="servicios" class="pt-10 pb-20 px-6">
         <div class="container mx-auto">
             <div class="text-center mb-16">
                 <h2 class="text-sm font-bold text-cyan-500 tracking-widest uppercase mb-2">Ecosistema GResk</h2>
